[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[project]
name = "pytest-reportlog"
dynamic = ["version"]
description = "Replacement for the --resultlog option, focused in simplicity and extensibility"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bruno Oliveira", email = "bruno@pytest.org" },
]
keywords = [
    "pytest",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
]

[project.entry-points.pytest11]
pytest_reportlog = "pytest_reportlog.plugin"

[project.urls]
Homepage = "https://github.com/pytest-dev/pytest-reportlog"
